--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "firebase": "^5.7.1",
     "kalendar-vue": "^0.2.8",
     "moment": "^2.23.0",
     "register-service-worker": "^1.5.2",
